--- a/html y Css/Registro/Registro.html
+++ b/html y Css/Registro/Registro.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="container-fluid bg-primary d-flex">
-      <img src="logo Tech online.png" width="70px" alt="">
+      <img src="log-Tech-online.png" width="70px" alt="">
       <p class="text-light mb-0 p-2 fs-1">Tech Organize</p>
     </header>
       <div class="text-center">
