Correccion de Errores

--- a/Diagramas, MER y MR/Diccionario Datos Proyecto.html
+++ b/Diagramas, MER y MR/Diccionario Datos Proyecto.html
@@ -53,7 +53,7 @@
 <div id="title-sect">
 <h1>Tech Organice<br> Data Dictionay</h1>
 <p>
-<em>2023-04-11</em>
+<em>2023-04-12</em>
 </p>
 <p class="proj-desc">
 <em></em>
@@ -813,7 +813,7 @@ crea un nombre de usuario
     <th>Comment</th>
 </tr>
 <tr>
-    <td>Solicitudaumentoespacio_Id_Compra</td>
+    <td>ID_Almacenamiento</td>
     <td>INT</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -823,7 +823,7 @@ crea un nombre de usuario
     <td>&nbsp;</td>
     <td class='attr'>&nbsp;</td>
     <td></td>
-    <td>Codigo para identificar la compra</td>
+    <td>Codigo para identificar el tipo de almacenamiento</td>
 </tr>
 <tr>
     <td>AlmacenamientoEstandar</td>
