--- a/html y Css/Aumento de espacio/index.html
+++ b/html y Css/Aumento de espacio/index.html
@@ -14,7 +14,7 @@
         <ul>
           <div class="content">
             <button>Mostrar El Menu</button>
-          </div>
+          </div>  
           <div class="container">
             <input type="text" placeholder="Buscar">
             <div class="btn">
@@ -32,7 +32,7 @@
         <img src="img/log-Tech-online.png" width="50" alt="Logo">
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Promociones</a></li>
+          <li><a href="./index.html">Aumento Espacio</a></li>
           <li><a href="#">Subir Archivo</a></li>
           <li><a href="#">Descargar Archivo</a></li>
           <li><a href="#">Compartir Archivo</a></li>
