--- a/html y Css/Aumento de espacio/AE.html
+++ b/html y Css/Aumento de espacio/AE.html
@@ -31,44 +31,56 @@
         </div>
         <img src="img/log-Tech-online.png" width="50" alt="Logo">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="./index.html">Aumento Espacio</a></li>
-          <li><a href="#">Subir Archivo</a></li>
+          <li><a href="../Home Page/HP.html">Inicio</a></li>
+          <li><a href="./AE.html">Aumento Espacio</a></li>
+          <li><a href="../Subida Archivos/SA.html">Subir Archivo</a></li>
           <li><a href="#">Descargar Archivo</a></li>
-          <li><a href="#">Compartir Archivo</a></li>
           <li><a href="#">Perfil</a></li>
           <li><a href="#">Cerrar Sesion</a></li>
         </ul>
       </div>
     </section>
+    <!-- JS Script -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
 <script>
+
+  // Muestra SideBar
   $('button').on('click', function() {
     $(".MENU").toggleClass('show');
   })
+
+  // Oculta SideBar
   $('.side-hide').on('click', function() {
     $(".MENU").toggleClass('show');
   });
+
 </script>
 
-  <div class="cont">
-    <span style="--l: '¡B';">¡B</span>
-    <span style="--l: 'i';">i</span>
-    <span style="--l: 'e';">e</span>
-    <span style="--l: 'n';">n</span>
-    <span style="--l: 'v';">v</span>
-    <span style="--l: 'e';">e</span>
-    <span style="--l: 'n';">n</span>
-    <span style="--l: 'i';">i</span>
-    <span style="--l: 'd';">d</span>
-    <span style="--l: 'o!';">o!</span>
-  </div>
-<main>
-  <article class="dropZone">
-    <p class="p_interno">Arrastra y suelta tus archivos aquí</p>
-  </article>
-</main>
-<script src="./js/script.js"></script>
+    <main>
+      <div class="offer-container">
+        <div class="offer-content">
+          <a href="#">
+            <div class="color-box red">
+              <span>100GB</span>
+              <span>COP 6,900/Mes</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="color-box blue">
+              <span>200GB</span>
+              <span>Cop 10,900/Mes</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="color-box green">
+              <span>500GB</span>
+              <span>COP 17,900/Mes</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </main>
 </body>  
     <footer>
         <h3>Derechos Reservados <?php echo date('Y')?></h3>
