--- a/html y Css/Subida Archivos/SA.html
+++ b/html y Css/Subida Archivos/SA.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <div class="content">
-            <button>Mostrar El Menu</button>
+            <button id="MEM">Mostrar El Menu</button>
           </div>  
           <div class="container">
             <input type="text" placeholder="Buscar">
@@ -31,57 +31,34 @@
         </div>
         <img src="img/log-Tech-online.png" width="50" alt="Logo">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="./index.html">Aumento Espacio</a></li>
-          <li><a href="#">Subir Archivo</a></li>
+          <li><a href="../Home Page/HP.html">Inicio</a></li>
+          <li><a href="../Aumento de espacio/AE.html">Aumento Espacio</a></li>
+          <li><a href="./SA.html">Subir Archivo</a></li>
           <li><a href="#">Descargar Archivo</a></li>
-          <li><a href="#">Compartir Archivo</a></li>
           <li><a href="#">Perfil</a></li>
           <li><a href="#">Cerrar Sesion</a></li>
         </ul>
       </div>
     </section>
-    <!-- JS Script -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
 <script>
-
-  // Muestra SideBar
   $('button').on('click', function() {
     $(".MENU").toggleClass('show');
   })
-
-  // Oculta SideBar
   $('.side-hide').on('click', function() {
     $(".MENU").toggleClass('show');
   });
-
 </script>
-
-    <main>
-      <div class="offer-container">
-        <div class="offer-content">
-          <a href="#">
-            <div class="color-box red">
-              <span>100GB</span>
-              <span>COP 6,900/Mes</span>
-            </div>
-          </a>
-          <a href="#">
-            <div class="color-box blue">
-              <span>200GB</span>
-              <span>Cop 10,900/Mes</span>
-            </div>
-          </a>
-          <a href="#">
-            <div class="color-box green">
-              <span>500GB</span>
-              <span>COP 17,900/Mes</span>
-            </div>
-          </a>
-        </div>
-      </div>
-    </main>
+<main>
+  <div class="drag-area">
+    <h2>Arrastra aqui tus archivos</h2>
+    <span>O</span>
+    <button id="SA" oneclick="validarArchivo()">Seleccionar archivos</button>
+    <input type="file" name="" id="input-file" hidden multiple>
+  </div>
+  <div id="preview"></div>
+  <script src="./Js/Script.js"></script>
+</main>
 </body>  
     <footer>
         <h3>Derechos Reservados <?php echo date('Y')?></h3>
