Correccion de errores en todos los codigos y enlaces a las otras vistas

--- a/html y Css/Subida Archivos/SA.html
+++ b/html y Css/Subida Archivos/SA.html
@@ -34,8 +34,8 @@
           <li><a href="../Home Page/HP.html">Inicio</a></li>
           <li><a href="../Aumento de espacio/AE.html">Aumento Espacio</a></li>
           <li><a href="./SA.html">Subir Archivo</a></li>
-          <li><a href="#">Descargar Archivo</a></li>
-          <li><a href="#">Perfil</a></li>
+          <li><a href="../Descargar Archivos/Descargas.html">Descargar Archivo</a></li>
+          <li><a href="../Perfil/Perfil.html">Perfil</a></li>
           <li><a href="#">Cerrar Sesion</a></li>
         </ul>
       </div>
